--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,31 @@
-# API配置
-PERSPECTIVE_API_KEY=your_api_key_here
+# 项目配置
+PROJECT_NAME=LLM评估平台
+VERSION=1.0.0
+DESCRIPTION=用于观测和评估大语言模型性能与安全性的综合平台
 
-# 其他配置
+# API配置
+API_V1_STR=/api/v1
+
+# 安全配置
+SECRET_KEY=your-secret-key-here
+ACCESS_TOKEN_EXPIRE_MINUTES=11520  # 8 days
+
+# 数据库配置
 DATABASE_URL=postgresql://user:password@localhost/dbname
-SECRET_KEY=your-secret-key-here 
+
+# 模型配置
+SUPPORTED_MODELS=["gpt-3.5-turbo","gpt-4","claude-2","llama-2","chatglm3"]
+
+# 题库配置
+MIN_QUESTIONS=500
+VALIDATION_THRESHOLD=0.9
+
+# Redis配置
+REDIS_URL=redis://localhost:6379/0
+
+# API密钥
+PERSPECTIVE_API_KEY=your-perspective-api-key
+
+# 日志配置
+LOG_LEVEL=INFO
+LOG_FILE=app.log 
