--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi>=0.68.0
 uvicorn>=0.15.0
 pydantic>=1.8.0
+pydantic-settings>=2.0.0
 python-dotenv>=0.19.0
 requests>=2.26.0
 beautifulsoup4>=4.9.3
@@ -9,11 +10,15 @@ numpy>=1.21.0
 matplotlib>=3.4.0
 seaborn>=0.11.0
 scikit-learn>=0.24.0
-transformers>=4.11.0
-torch>=1.9.0
+transformers>=4.30.0
+torch>=2.0.0
 python-multipart>=0.0.5
 jinja2>=3.0.0
 aiofiles>=0.7.0
 python-jose>=3.3.0
 passlib>=1.7.4
-bcrypt>=3.2.0 
+bcrypt>=3.2.0
+redis>=4.0.0
+celery>=5.1.0
+prometheus-client>=0.12.0
+aiohttp>=3.8.0 
