--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # 项目配置
-PROJECT_NAME=LLM评估平台
+PROJECT_NAME=大模型性能与安全观测平台
 VERSION=1.0.0
-DESCRIPTION=用于观测和评估大语言模型性能与安全性的综合平台
+DESCRIPTION=用于观测和评估大语言模型的性能与安全性
 
 # API配置
 API_V1_STR=/api/v1
@@ -23,8 +23,23 @@ VALIDATION_THRESHOLD=0.9
 # Redis配置
 REDIS_URL=redis://localhost:6379/0
 
+# 安全评估API配置
+PERSPECTIVE_API_KEY=AIzaSyB5ut4szJ7itMv4NFCleLF87EcVvoGgKI4
+
 # API密钥
-PERSPECTIVE_API_KEY=your-perspective-api-key
+DEEPSEEK_API_KEY=sk-72aa33ae58ae497680a62ebafb8d1cb3
+DEEPSEEK_MODEL_NAME=deepseek-chat
+DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+
+# OpenAI API配置
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL_NAME=gpt-4
+OPENAI_API_BASE=https://api.openai.com/v1
+
+# Gemini API配置
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL_NAME=gemini-pro
+GEMINI_API_BASE=https://generativelanguage.googleapis.com/v1
 
 # 日志配置
 LOG_LEVEL=INFO
