--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=11520  # 8 days
 DATABASE_URL=postgresql://user:password@localhost/dbname
 
 # 模型配置
-SUPPORTED_MODELS=["gpt-3.5-turbo","gpt-4","claude-2","llama-2","chatglm3"]
+SUPPORTED_MODELS=["gpt-3.5-turbo","gpt-4","deepseek","claude-2","llama-2","chatglm3"]
 
 # 题库配置
 MIN_QUESTIONS=500
