--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,14 @@ wheels/
 # Virtual Environment
 venv/
 ENV/
+.venv/
+.venv/*
+app/.venv/
+app/.venv/Lib/
+app/.venv/Scripts/
+app/.venv/Include/
+app/.venv/share/
+app/.venv/pyvenv.cfg
 
 # IDE
 .idea/
@@ -46,4 +54,18 @@ logs/
 .cache/
 .pytest_cache/
 .coverage
-htmlcov/ 
+htmlcov/
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/coverage/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/package-lock.json 
