--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ app/.venv/pyvenv.cfg
 *.swo
 
 # Environment variables
-.env
+# .env
 
 # Logs
 logs/
@@ -56,3 +56,16 @@ logs/
 .coverage
 htmlcov/
 
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/coverage/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/package-lock.json 
