--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ API_V1_STR=/api/v1
 
 # 安全配置
 SECRET_KEY=your-secret-key-here
-ACCESS_TOKEN_EXPIRE_MINUTES=11520  # 8 days
+ACCESS_TOKEN_EXPIRE_MINUTES=11520
 
 # 数据库配置
 DATABASE_URL=postgresql://user:password@localhost/dbname
