--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,14 @@ DESCRIPTION=用于观测和评估大语言模型的性能与安全性
 API_V1_STR=/api/v1
 
 # 安全配置
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=your_secret_key
 ACCESS_TOKEN_EXPIRE_MINUTES=11520  # 8 days
 
 # 数据库配置
-DATABASE_URL=postgresql://user:password@localhost/dbname
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
 
 # 模型配置
-SUPPORTED_MODELS=["gpt-3.5-turbo","gpt-4","deepseek","claude-2","llama-2","chatglm3"]
+SUPPORTED_MODELS=["openai", "deepseek", "doubao", "qwen", "llama", "baichuan"]
 
 # 题库配置
 MIN_QUESTIONS=500
@@ -27,20 +27,29 @@ REDIS_URL=redis://localhost:6379/0
 PERSPECTIVE_API_KEY=AIzaSyB5ut4szJ7itMv4NFCleLF87EcVvoGgKI4
 
 # API密钥
-DEEPSEEK_API_KEY=sk-72aa33ae58ae497680a62ebafb8d1cb3
+DEEPSEEK_API_KEY=your_deepseek_api_key
 DEEPSEEK_MODEL_NAME=deepseek-chat
 DEEPSEEK_API_BASE=https://api.deepseek.com/v1
 
 # OpenAI API配置
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=your_openai_api_key
 OPENAI_MODEL_NAME=gpt-4
 OPENAI_API_BASE=https://api.openai.com/v1
 
 # Gemini API配置
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=your_gemini_api_key
 GEMINI_MODEL_NAME=gemini-pro
 GEMINI_API_BASE=https://generativelanguage.googleapis.com/v1
 
 # 日志配置
 LOG_LEVEL=INFO
-LOG_FILE=app.log 
+LOG_FILE=app.log
+
+# 输出目录
+OUTPUT_DIR=app/out
+
+# API Keys
+DOUBAO_API_KEY=your_doubao_api_key
+QWEN_API_KEY=your_qwen_api_key
+LLAMA_API_KEY=your_llama_api_key
+BAICHUAN_API_KEY=your_baichuan_api_key 
