全都可以运行了 还有小问题

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=11520
 DATABASE_URL=postgresql://user:password@localhost/dbname
 
 # 模型配置
-SUPPORTED_MODELS=["gpt-3.5-turbo","gpt-4","deepseek-v3","claude-2","llama-2","chatglm3","doubao-1.5-pro-32k"]
+SUPPORTED_MODELS=["gpt-4","deepseek-v3","llama-2","doubao-1.5-pro-32k","qwen"]
 
 # 题库配置
 MIN_QUESTIONS=500
