--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ reportlab>=4.0.0  # 用于PDF报告生成
 scikit-learn>=0.24.0
 transformers>=4.30.0
 torch>=2.0.0
+sentence-transformers>=2.2.0  # 语义相似度模型
+rouge>=1.0.1  # 文本评估指标
+nltk>=3.8.0  # 自然语言处理工具包
 
 # API和HTTP
 aiohttp>=3.8.0
@@ -49,4 +52,5 @@ redis>=4.5.0
 celery>=5.3.0
 
 # 新增依赖
-openai>=1.0.0 
+openai>=1.0.0
+tqdm>=4.65.0  # 进度条显示 
