--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.7",
@@ -18,6 +20,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@vitejs/plugin-vue": "^5.0.3",
     "vite": "^6.2.4"
   }
