测试页面有日志

--- a/.env
+++ b/.env
@@ -40,8 +40,8 @@ GEMINI_API_BASE=https://generativelanguage.googleapis.com/v1
 
 # deepseekAPI配置
 DEEPSEEK_API_KEY=sk-72aa33ae58ae497680a62ebafb8d1cb3
-DEEPSEEK_MODEL_NAME=deepseek-v3
-DEEPSEEK_API_BASE=https://api.deepseek.com/v1
+DEEPSEEK_MODEL_NAME=deepseek-chat
+DEEPSEEK_API_BASE=https://api.deepseek.com
 
 # 豆包API配置
 DOUBAO_API_KEY=4727e524-c46f-4ac5-a278-2aaf9cea3273
