--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 frontend/package-lock.json
+frontend/node_modules/.vite/
 
 
 # Tests and Models
