--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.7",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
